Simplify AddOpens by including them in the manifest file