@@ -5,6 +5,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 import java.time.OffsetDateTime
 import java.time.ZoneOffset
 import java.time.format.DateTimeFormatter
+import kotlin.streams.toList
 
 plugins {
     id("com.gtnewhorizons.gtnhconvention")
@@ -143,6 +144,7 @@ val forgePatchesJar = tasks.register<Jar>("forgePatchesJar") {
         attributes(
             mapOf(
                 "Class-Path" to libraryList.joinToString(" "),
+                "Add-Opens" to addOpens.stream().map{ it.split("=")[0]}.toList().joinToString(" "),
                 "Main-Class" to "me.eigenraven.lwjgl3ify.rfb.entry.ServerMain"
             )
         )
